traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:4: error: Boolean does not take parameters
  while (!positionfinale()){
                        ^